fix: correct grid ID in HTML and update CSS styles for grid layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Maze Generation</h1>
-        <div class="grid">
+        <div id="grid">
             <!-- Maze grid will be generated here -->
         </div>
     </div>
