--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div id="grid">
             <!-- Maze grid will be generated here -->
         </div>
+        <div id="controls">
+            <button id="generate">Select wall</button>
+            <button id ="step">Update view</button>
     </div>
     <script src="controller.js" type="module"></script>
 </body>
