feature. Run maze button fix and auto step button implementation.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             <!-- Maze grid will be generated here -->
         </div>
         <div id="controls">
-            <button id="generate">Select wall</button>
-            <button id ="step">Update view</button>
+            <button id="generate">Run Maze Generator</button>
+            <button id="autostep">Auto Step</button>
+            <button id ="step">Single Step</button>
     </div>
     <script src="controller.js" type="module"></script>
 </body>
