refactor: Moved files into relevant directories

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maze generation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
@@ -17,6 +17,6 @@
             <button id="autostep">Auto Step</button>
             <button id ="step">Single Step</button>
     </div>
-    <script src="controller.js" type="module"></script>
+    <script src="javascript/controller.js" type="module"></script>
 </body>
 </html>
