--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
             <!-- Maze grid will be generated here -->
         </div>
         <div id="controls">
-            <button id="generate">Run Maze Generator</button>
-            <button id="autostep">Auto Step</button>
-            <button id ="step">Single Step</button>
+            <div>
+                <button id="generate">Run Maze Generator</button>
+                <button id="autostep">Auto Step</button>
+                <button id ="step">Single Step</button>
+            </div>
+            <div style="margin-top: 1rem;">
+                <label for="rows">Rows:</label>
+                <input type="number" id="rows" value="31" min="11" max="49" step="2">
+                <label for="cols">Columns:</label>
+                <input type="number" id="cols" value="43" min="11" max="87" step="2">
+                <button id="reset">Reset Maze</button>
+            </div>
+        </div>
     </div>
     <script src="javascript/controller.js" type="module"></script>
 </body>
